testsuite/tests/properties/invalid_abstract/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- list+(or(Number(@number)
                                   | Identifier(@identifier)))
}
